# attack-on-titan

./: README.md  build.gradle  maps  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jamesfchen/titan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jamesfchen/titan/: AbsPermissionsActivity.java  App.java  StartActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jamesfchen/titan/: ExampleUnitTest.kt
common/: CMakeLists.txt  build.gradle
common/src/main/cpp/: asset_ext.cpp  asset_ext.h  constans.h  log_ext.h  reflect_ext.cpp  reflect_ext.h
common/src/main/cpp/cjni/: log.h
common/src/main/cpp/fake_linker/: CMakeLists.txt  sharedlibs.cpp
common/src/main/cpp/fake_linker/sigmux/: sigmux.c
common/src/main/cpp/util/: asset_ext.cpp  constans.h
common/src/main/java/com/jamesfchen/common/: GenericClassHelper.java  Loader.java  PackageHelper.java  Reflector.java  Utils.java  util.kt
dexshell/: CMakeLists.txt  README.md  build.gradle
dexshell/src/androidTest/java/com/jamesfchen/dexshell/: ExampleInstrumentedTest.kt
dexshell/src/main/: AndroidManifest.xml
dexshell/src/main/java/com/jamesfchen/dexshell/: DexShellApplication.java  StartActivity.java
dexshell/src/main/jni/: Application.mk
dexshell/src/main/jni/linker/: CMakeLists.txt  README.md  ScopedFd.h  extra_defines.h  linker.cpp
dexshell/src/main/jni/soshell/: CMakeLists.txt  elf_defines.h  gdlfcn.cpp
dexshell/src/main/jni/test/SoTest/: .project  AndroidManifest.xml
dexshell/src/main/jni/test/SoTest/jni/: Application.mk  NativeMath.cpp
dexshell/src/test/java/com/jamesfchen/dexshell/: ExampleUnitTest.kt
frida/: .gitignore  README.md  index.js  tsconfig.json
frida/src/: Hook_PackageManager_getPackageInfo.js  anti_detect.js  haha.js  index.ts  pms_attack.js
frida/src/utils/: hooker.js  p.ts  reflect.js
gradle/wrapper/: gradle-wrapper.properties
guard/: CMakeLists.txt  README.md  build.gradle
guard/src/main/java/com/jamesfchen/guard/: TestGuardActivity.kt
guard/src/main/jni/dynamic_so/: CMakeLists.txt  main.cpp
guard/src/main/jni/guard/: CMakeLists.txt  data_struct_ext.h  event.cpp  guard.cpp  main.cpp  so_protector.cpp
guard/src/main/jni/guard/include/: data_struct_ext.h  log_ext.h  so_protector.h
guard/src/main/res/layout/: activity_testguard.xml
yposed/: CMakeLists.txt  README.md  build.gradle  push_assets.sh
yposed/src/androidTest/java/com/jamesfchen/yposed/: ExampleInstrumentedTest.java
yposed/src/main/: AndroidManifest.xml
yposed/src/main/assets/: yposedplugin-debug.apk  yposedplugin2-debug.apk  yposedplugin3-debug.apk
yposed/src/main/java/com/dianping/v1/: Hook.java  IBinderProxy.java  PackageManagerProxy.java
yposed/src/main/java/com/hawksjamesf/yposed/: Hooker.java  IActivityManagerProxy.java  InstrumentationProxy.java  StubActivity.kt  YPosedActivity.kt
yposed/src/main/java/com/jamesfchen/hook/: HProxy.java  Hooker.java  IActivityManagerProxy.java  IBinderProxy.java  IContentProviderProxy.java  InstrumentationProxy.java  MyCoreComponentFactory.java  PackageManagerProxy.java  ProviderHelper.java  ReceiverHelper.java  ServiceManager.java  StubActivity.kt  StubContentProvider.java  StubService.java
yposed/src/main/java/com/jamesfchen/hotfix/: README
yposed/src/main/java/com/jamesfchen/plugin/: HProxy.java  Hooker.java  IActivityManagerProxy.java  IBinderProxy.java  IContentProviderProxy.java  IPackageManagerProxy.java  InstrumentationProxy.java  MyCoreComponentFactory.java  PackageManagerProxy.java  ProviderHelper.java  ReceiverHelper.java  ServiceManager.java  StubActivity.kt  StubContentProvider.java  StubService.java
yposed/src/main/java/com/jamesfchen/yposed/: H.java  Hooker.java  IActivityManagerProxy.java  IBinderProxy.java  InstrumentationProxy.java  MyCoreComponentFactory.java  NetClient.java  PackageManagerProxy.java  ProviderHelper.java  ServiceManager.java  StubActivity.kt  StubContentProvider.java  StubService.java  TestService.java  YPosedActivity.kt
yposed/src/main/jni/gotplthook/: CMakeLists.txt  gotplthook_main.cpp
yposed/src/main/jni/gotplthook/trampoline/: hooks.cpp  plthooks.cpp  plthooks.h  trampoline.cpp  trampoline.h
yposed/src/main/jni/hotfix/: CMakeLists.txt  HotFix.cpp  art_10.h  art_8.0r1.h  hotfix_main.cpp  hotfixmain.cpp
yposed/src/main/jni/utils/: AssetUtil.cpp  CMakeLists.txt  ReflectUtil.cpp  log.cpp
yposed/src/main/jni/utils/include/: AssetUtil.h  ReflectUtil.h
yposed/src/main/jni/yahfa/: dl.c  trampoline.c
yposed/src/main/res/layout/: activity_yposed.xml
yposed/src/test/java/com/jamesfchen/yposed/: ExampleUnitTest.java
yposedplugin/: build.gradle
yposedplugin/src/androidTest/java/com/jamesfchen/yposedplugin/: ExampleInstrumentedTest.kt
yposedplugin/src/main/: AndroidManifest.xml
yposedplugin/src/main/java/com/hawksjamesf/yposedplugin/: MyActivity.java
yposedplugin/src/main/java/com/jamesfchen/yposed/: NetClient.java
yposedplugin/src/main/java/com/jamesfchen/yposedplugin/: Hook_PackageManager_getPackageInfo.java  MyActivity.java  NetClient_sendRequest.java
yposedplugin/src/main/java/lab/galaxy/yahfa/: HookInfo.java
yposedplugin/src/test/java/com/jamesfchen/yposedplugin/: ExampleUnitTest.kt
yposedplugin2/: build.gradle
yposedplugin2/src/main/: AndroidManifest.xml
yposedplugin2/src/main/java/com/jamesfchen/yposedplugin2/: MyActivity.java  MyContentProvider.java  MyReceiver.java  MyService.java
yposedplugin3/: build.gradle
yposedplugin3/src/main/: AndroidManifest.xml
yposedplugin3/src/main/res/layout/: layout.xml
yposedstub/: build.gradle
yposedstub/src/main/: AndroidManifest.xml
yposedstub/src/main/aidl/android/app/: ApplicationErrorReport.aidl  IActivityManager.aidl
yposedstub/src/main/java/android/app/: ActivityThread.java  ApplicationErrorReport.java  LoadedApk.java
yposedstub/src/main/java/android/content/: ContentResolver.java  IContentProvider.java
yposedstub/src/main/java/android/os/: ServiceManager.java  UserHandle.java
(+20 files in other folders)
